Creación de la capa de acceso a datos

--- a/Financiera.Data/Financiera.Data.csproj
+++ b/Financiera.Data/Financiera.Data.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Financiera.Dominio\Financiera.Dominio.csproj" />
+  </ItemGroup>
+
 </Project>
