Se implemento la lectura de datos en la capa de presentación

--- a/Financiera.AppWin/Financiera.AppWin.csproj
+++ b/Financiera.AppWin/Financiera.AppWin.csproj
@@ -8,4 +8,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Financiera.Dominio\Financiera.Dominio.csproj" />
+    <ProjectReference Include="..\Financiera.Logic\Financiera.Logic.csproj" />
+  </ItemGroup>
+
 </Project>
